--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@ $(document).ready(function () {
 
 <div id="assignments-and-projects" class="section level1">
 <h1>Assignments and Projects</h1>
+<ul>
+<li><a href="https://www.molecularecologist.com">Reading materials on molecular stuff</a></li>
+</ul>
 </div>
 
 
