--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
 <meta name="author" content="Anoob Prakash" />
 
-<meta name="date" content="2018-08-29" />
 
 <title>Learning with Curiosity</title>
 
@@ -121,15 +120,18 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">Learning with Curiosity</h1>
 <h4 class="author"><em>Anoob Prakash</em></h4>
-<h4 class="date"><em>29 August 2018</em></h4>
 
 </div>
 
 
 <hr />
+<div id="i-have-not-failed.-ive-just-found-10000-ways-that-wont-work.---edison" class="section level3">
+<h3><em>I have not failed. I’ve just found 10,000 ways that won’t work.</em> - Edison</h3>
+<hr />
 <blockquote>
 <h1 id="assignments-and-projects">Assignments and Projects</h1>
 </blockquote>
+</div>
 <div id="reading-materials-on-molecular-stuff" class="section level3">
 <h3><a href="https://www.molecularecologist.com">Reading materials on molecular stuff</a></h3>
 </div>
