--- a/index.html
+++ b/index.html
@@ -125,11 +125,12 @@ $(document).ready(function () {
 
 
 <hr />
-<div id="i-have-not-failed.-ive-just-found-10000-ways-that-wont-work.---edison" class="section level3">
-<h3><em>I have not failed. I’ve just found 10,000 ways that won’t work.</em> - Edison</h3>
+<div id="i-have-not-failed.-ive-just-found-10000-ways-that-wont-work.---edison" class="section level4">
+<h4><em>I have not failed. I’ve just found 10,000 ways that won’t work.</em> - Edison</h4>
 <hr />
 <blockquote>
 <h1 id="assignments-and-projects">Assignments and Projects</h1>
+<p><a href="homework2.html">Homework2</a></p>
 </blockquote>
 </div>
 <div id="reading-materials-on-molecular-stuff" class="section level3">
