tidying up the homepage

--- a/index.html
+++ b/index.html
@@ -129,9 +129,10 @@ $(document).ready(function () {
 <h4><em>I have not failed. I’ve just found 10,000 ways that won’t work.</em> - Edison</h4>
 <hr />
 <blockquote>
-<h1 id="assignments-and-projects">Assignments and Projects</h1>
-<p><a href="homework2.html">Homework2</a></p>
+<p>Assignments and Projects</p>
 </blockquote>
+<p>. Homework1</p>
+<p>. <a href="homework2.html">Homework2</a></p>
 </div>
 <div id="reading-materials-on-molecular-stuff" class="section level3">
 <h3><a href="https://www.molecularecologist.com">Reading materials on molecular stuff</a></h3>
