additional minor changes

--- a/index.html
+++ b/index.html
@@ -131,8 +131,11 @@ $(document).ready(function () {
 <blockquote>
 <p>Assignments and Projects</p>
 </blockquote>
-<p>. Homework1</p>
-<p>. <a href="homework2.html">Homework2</a></p>
+<p>. Homework1<br />
+Learning about GitHub and setting up website for uploading lab assignments.</p>
+<p>. <a href="homework2.html">Homework2</a><br />
+Working with different diagrams to illustrate and draw out an outline for potential research areas.</p>
+<p>. Homework3</p>
 </div>
 <div id="reading-materials-on-molecular-stuff" class="section level3">
 <h3><a href="https://www.molecularecologist.com">Reading materials on molecular stuff</a></h3>
