coding and regular expressions completed

--- a/index.html
+++ b/index.html
@@ -131,12 +131,13 @@ $(document).ready(function () {
 <blockquote>
 <p>Assignments and Projects</p>
 </blockquote>
-<p>. Homework1<br />
+<p>. Homework 1<br />
 Learning about GitHub and setting up website for uploading lab assignments.</p>
-<p>. <a href="homework2.html">Homework2</a><br />
+<p>. <a href="homework2.html">Homework 2</a><br />
 Working with different diagrams to illustrate and draw out an outline for potential research areas.</p>
-<p>. <a href="NotesBeamer.pdf">Homework3</a><br />
+<p>. <a href="NotesBeamer.pdf">Homework 3</a><br />
 Learning to use beamer and creating ones own presentation using beamer and R markdown.</p>
+<p>. <a href="Homework4RegularExpressions.html">Homework 4</a> Doing some basic coding assignments and learning to use regular expressions in a text editor.</p>
 <p>………………………………………………………….</p>
 <div id="reading-materials-on-molecular-stuff" class="section level5">
 <h5><a href="https://www.molecularecologist.com">Reading materials on molecular stuff</a></h5>
