--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -137,8 +140,9 @@ Learning about GitHub and setting up website for uploading lab assignments.</p>
 Working with different diagrams to illustrate and draw out an outline for potential research areas.</p>
 <p>. <a href="NotesBeamer.pdf">Homework 3</a><br />
 Learning to use beamer and creating ones own presentation using beamer and R markdown.</p>
-<p>. <a href="Homework4RegularExpressions.html">Homework 4</a> Doing some basic coding assignments and learning to use regular expressions in a text editor.</p>
-<p>………………………………………………………….</p>
+<p>. <a href="Homework4RegularExpressions.html">Homework 4</a><br />
+Doing some basic coding assignments and learning to use regular expressions in a text editor.</p>
+<hr />
 <div id="reading-materials-on-molecular-stuff" class="section level5">
 <h5><a href="https://www.molecularecologist.com">Reading materials on molecular stuff</a></h5>
 </div>
