getting around dplyr

--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@ Working with different diagrams to illustrate and draw out an outline for potent
 Learning to use beamer and creating ones own presentation using beamer and R markdown.</p>
 <p>. <a href="Homework4RegularExpressions.html">Homework 4</a><br />
 Doing some basic coding assignments and learning to use regular expressions in a text editor.</p>
+<p>. <a href="Homework5dplyr.html">Homework 5</a><br />
+Learning to code in dplyr and how to use piping for efficient coding.</p>
 <hr />
 <div id="reading-materials-on-molecular-stuff" class="section level5">
 <h5><a href="https://www.molecularecologist.com">Reading materials on molecular stuff</a></h5>
