--- a/Homework5dplyr.html
+++ b/Homework5dplyr.html
@@ -92,6 +92,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -126,7 +129,110 @@ $(document).ready(function () {
 </div>
 
 
+<hr />
+<p>Q. Examine the structure of the iris dataset. How many observations and variables are in the dataset?</p>
+<pre class="r"><code>library(dplyr)</code></pre>
+<pre><code>## 
+## Attaching package: 'dplyr'</code></pre>
+<pre><code>## The following objects are masked from 'package:stats':
+## 
+##     filter, lag</code></pre>
+<pre><code>## The following objects are masked from 'package:base':
+## 
+##     intersect, setdiff, setequal, union</code></pre>
+<pre class="r"><code>glimpse(iris)</code></pre>
+<pre><code>## Observations: 150
+## Variables: 5
+## $ Sepal.Length &lt;dbl&gt; 5.1, 4.9, 4.7, 4.6, 5.0, 5.4, 4.6, 5.0, 4.4, 4.9,...
+## $ Sepal.Width  &lt;dbl&gt; 3.5, 3.0, 3.2, 3.1, 3.6, 3.9, 3.4, 3.4, 2.9, 3.1,...
+## $ Petal.Length &lt;dbl&gt; 1.4, 1.4, 1.3, 1.5, 1.4, 1.7, 1.4, 1.5, 1.4, 1.5,...
+## $ Petal.Width  &lt;dbl&gt; 0.2, 0.2, 0.2, 0.2, 0.2, 0.4, 0.3, 0.2, 0.2, 0.1,...
+## $ Species      &lt;fct&gt; setosa, setosa, setosa, setosa, setosa, setosa, s...</code></pre>
+<p>Iris dataset has 150 observations and 5 variables</p>
+<hr />
+<p>Q. Create a new data frame iris1 that contains only the species virginica and versicolor with sepal lengths longer than 6 cm and sepal widths longer than 2.5 cm. How many observations and variables are in the dataset?</p>
+<pre class="r"><code>iris1 &lt;- filter(iris, 
+       Species %in% c(&quot;virginica&quot;, &quot;versicolor&quot;), 
+       Sepal.Length &gt; 6,
+       Sepal.Width &gt; 2.5)
+glimpse(iris1)</code></pre>
+<pre><code>## Observations: 56
+## Variables: 5
+## $ Sepal.Length &lt;dbl&gt; 7.0, 6.4, 6.9, 6.5, 6.3, 6.6, 6.1, 6.7, 6.1, 6.1,...
+## $ Sepal.Width  &lt;dbl&gt; 3.2, 3.2, 3.1, 2.8, 3.3, 2.9, 2.9, 3.1, 2.8, 2.8,...
+## $ Petal.Length &lt;dbl&gt; 4.7, 4.5, 4.9, 4.6, 4.7, 4.6, 4.7, 4.4, 4.0, 4.7,...
+## $ Petal.Width  &lt;dbl&gt; 1.4, 1.5, 1.5, 1.5, 1.6, 1.3, 1.4, 1.4, 1.3, 1.2,...
+## $ Species      &lt;fct&gt; versicolor, versicolor, versicolor, versicolor, v...</code></pre>
+<hr />
+<p>Q. Now, create a iris2 data frame from iris1 that contains only the columns for Species, Sepal.Length, and Sepal.Width. How many observations and variables are in the dataset?</p>
+<pre class="r"><code>iris2 &lt;- select(iris1, 
+                c(Species, Sepal.Length, Sepal.Width))
+glimpse(iris2) </code></pre>
+<pre><code>## Observations: 56
+## Variables: 3
+## $ Species      &lt;fct&gt; versicolor, versicolor, versicolor, versicolor, v...
+## $ Sepal.Length &lt;dbl&gt; 7.0, 6.4, 6.9, 6.5, 6.3, 6.6, 6.1, 6.7, 6.1, 6.1,...
+## $ Sepal.Width  &lt;dbl&gt; 3.2, 3.2, 3.1, 2.8, 3.3, 2.9, 2.9, 3.1, 2.8, 2.8,...</code></pre>
+<hr />
+<p>Q. Create an iris3 data frame from iris2 that orders the observations from largest to smallest sepal length. Show the first 6 rows of this dataset.</p>
+<pre class="r"><code>iris3 &lt;- arrange(iris2, desc(Sepal.Length))
+head(iris3) </code></pre>
+<pre><code>##     Species Sepal.Length Sepal.Width
+## 1 virginica          7.9         3.8
+## 2 virginica          7.7         3.8
+## 3 virginica          7.7         2.6
+## 4 virginica          7.7         2.8
+## 5 virginica          7.7         3.0
+## 6 virginica          7.6         3.0</code></pre>
+<hr />
+<p>Q. Create an iris4 data frame from iris3 that creates a column with a sepal area (length * width) value for each observation. How many observations and variables are in the dataset?</p>
+<pre class="r"><code>iris4 &lt;- mutate(iris3, Sepal.Area = Sepal.Length * Sepal.Width)
 
+glimpse(iris4)</code></pre>
+<pre><code>## Observations: 56
+## Variables: 4
+## $ Species      &lt;fct&gt; virginica, virginica, virginica, virginica, virgi...
+## $ Sepal.Length &lt;dbl&gt; 7.9, 7.7, 7.7, 7.7, 7.7, 7.6, 7.4, 7.3, 7.2, 7.2,...
+## $ Sepal.Width  &lt;dbl&gt; 3.8, 3.8, 2.6, 2.8, 3.0, 3.0, 2.8, 2.9, 3.6, 3.2,...
+## $ Sepal.Area   &lt;dbl&gt; 30.02, 29.26, 20.02, 21.56, 23.10, 22.80, 20.72, ...</code></pre>
+<hr />
+<p>Q. Create iris5 that calculates the average sepal length, the average sepal width, and the sample size of the entire iris4 data frame and print iris5.</p>
+<pre class="r"><code>iris5 &lt;- summarize(iris4, 
+                   meanLength = mean(Sepal.Length), 
+                   meanWidth = mean(Sepal.Width), 
+                   meanArea = mean(Sepal.Area), 
+                   N = n()) 
+print(iris5)</code></pre>
+<pre><code>##   meanLength meanWidth meanArea  N
+## 1   6.698214  3.041071 20.40464 56</code></pre>
+<hr />
+<p>Q. Finally, create iris6 that calculates the average sepal length, the average sepal width, and the sample size for each species of in the iris4 data frame and print iris6.</p>
+<pre class="r"><code>iris6 &lt;- summarise(iris4, meanLength = mean(Sepal.Length), 
+                   meanWidth = mean(Sepal.Width), 
+                   meanArea = mean(Sepal.Area), 
+                   N = n())
+print(iris6)</code></pre>
+<pre><code>##   meanLength meanWidth meanArea  N
+## 1   6.698214  3.041071 20.40464 56</code></pre>
+<hr />
+<p>Q. In these exercises, you have successively modified different versions of the data frame iris1, iris2, iris3, iris4, iris5 and iris6. At each stage, the output data frame from one operation serves as the input from the next.</p>
+<p>A more efficient way to do this is to use the pipe operator %&gt;% from the tidyr package. See if you can rework all of your previous statements into an extended piping operation that uses iris as the input and generates iris6 as the output.</p>
+<pre class="r"><code>iris6 &lt;- iris %&gt;%
+  filter(Species %in% c(&quot;virginica&quot;, &quot;versicolor&quot;), 
+       Sepal.Length &gt; 6,
+       Sepal.Width &gt; 2.5) %&gt;%
+  group_by(Species) %&gt;%
+  mutate(Sepal.Area = Sepal.Length * Sepal.Width) %&gt;%
+  summarise(meanLength = mean(Sepal.Length), 
+                   meanWidth = mean(Sepal.Width), 
+                   meanArea = mean(Sepal.Area), 
+                   SampleSize = n())
+print(iris6)</code></pre>
+<pre><code>## # A tibble: 2 x 5
+##   Species    meanLength meanWidth meanArea SampleSize
+##   &lt;fct&gt;           &lt;dbl&gt;     &lt;dbl&gt;    &lt;dbl&gt;      &lt;int&gt;
+## 1 versicolor       6.48      2.99     19.4         17
+## 2 virginica        6.79      3.06     20.8         39</code></pre>
 
 
 
