--- a/Homework5dplyr.html
+++ b/Homework5dplyr.html
@@ -201,19 +201,19 @@ glimpse(iris4)</code></pre>
                    meanLength = mean(Sepal.Length), 
                    meanWidth = mean(Sepal.Width), 
                    meanArea = mean(Sepal.Area), 
-                   N = n()) 
+                   SampleSize = n()) 
 print(iris5)</code></pre>
-<pre><code>##   meanLength meanWidth meanArea  N
-## 1   6.698214  3.041071 20.40464 56</code></pre>
+<pre><code>##   meanLength meanWidth meanArea SampleSize
+## 1   6.698214  3.041071 20.40464         56</code></pre>
 <hr />
 <p>Q. Finally, create iris6 that calculates the average sepal length, the average sepal width, and the sample size for each species of in the iris4 data frame and print iris6.</p>
 <pre class="r"><code>iris6 &lt;- summarise(iris4, meanLength = mean(Sepal.Length), 
                    meanWidth = mean(Sepal.Width), 
                    meanArea = mean(Sepal.Area), 
-                   N = n())
+                   SampleSize = n())
 print(iris6)</code></pre>
-<pre><code>##   meanLength meanWidth meanArea  N
-## 1   6.698214  3.041071 20.40464 56</code></pre>
+<pre><code>##   meanLength meanWidth meanArea SampleSize
+## 1   6.698214  3.041071 20.40464         56</code></pre>
 <hr />
 <p>Q. In these exercises, you have successively modified different versions of the data frame iris1, iris2, iris3, iris4, iris5 and iris6. At each stage, the output data frame from one operation serves as the input from the next.</p>
 <p>A more efficient way to do this is to use the pipe operator %&gt;% from the tidyr package. See if you can rework all of your previous statements into an extended piping operation that uses iris as the input and generates iris6 as the output.</p>
