--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@ Learning to use beamer and creating ones own presentation using beamer and R mar
 Doing some basic coding assignments and learning to use regular expressions in a text editor.</p>
 <p>. <a href="Homework5dplyr.html">Homework 5</a><br />
 Learning to code in dplyr and how to use piping for efficient coding.</p>
+<p>. <a href="Homework6DataDistribution.html">Homework 6</a><br />
+Simulating and fitting data distributions</p>
 <hr />
 <div id="reading-materials-on-molecular-stuff" class="section level5">
 <h5><a href="https://www.molecularecologist.com">Reading materials on molecular stuff</a></h5>
