done editing homework7

--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@ Doing some basic coding assignments and learning to use regular expressions in a
 <p>. <a href="Homework5dplyr.html">Homework 5</a><br />
 Learning to code in dplyr and how to use piping for efficient coding.</p>
 <p>. <a href="Homework6DataDistribution.html">Homework 6</a><br />
-Simulating and fitting data distributions</p>
+Simulating and fitting data distributions.</p>
+<p>. <a href="Homework7CFakedata.html">Homework 7</a><br />
+Creating Fake Data Sets To Explore Hypotheses.</p>
 <hr />
 <div id="reading-materials-on-molecular-stuff" class="section level5">
 <h5><a href="https://www.molecularecologist.com">Reading materials on molecular stuff</a></h5>
