--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@ Learning to code in dplyr and how to use piping for efficient coding.</p>
 Simulating and fitting data distributions.</p>
 <p>. <a href="Homework7CFakedata.html">Homework 7</a><br />
 Creating Fake Data Sets To Explore Hypotheses.</p>
+<p>. <a href="Homework8StructuredProgramming.html">Homework 8</a><br />
+Creating functions and working with structured programming</p>
 <hr />
 <div id="reading-materials-on-molecular-stuff" class="section level5">
 <h5><a href="https://www.molecularecologist.com">Reading materials on molecular stuff</a></h5>
