class notes for ggplot

--- a/Homework10Looping.html
+++ b/Homework10Looping.html
@@ -320,7 +320,7 @@ print(expModel)</code></pre>
 pVal &lt;- lReg$coefficients[2,4]  
 pVal</code></pre>
 <pre><code>## [1] 0.658682</code></pre>
-<pre class="r"><code># The p-value thus generated was not significant enough to denote a that a change in temperature affects the water use efficiency, which was the initial hypothesis for the experiment. The randomisation tests also gives a similar result, confirming the validity of the hypothesis.</code></pre>
+<pre class="r"><code># The p-value thus generated was not significant enough to denote that a change in temperature affects the water use efficiency, which was the initial hypothesis for the experiment. The randomisation tests also gives a similar result, confirming the validity of the hypothesis.</code></pre>
 
 
 
