--- a/Homework10Looping.html
+++ b/Homework10Looping.html
@@ -153,7 +153,7 @@ print(y)</code></pre>
 yVar &lt;- 9
 
 ##############################################################
-# FUNCTION:Crreate Matrix (dMat)
+# FUNCTION:Create Matrix (dMat)
 # INPUTS:integer values for matrix dimensions
 # OUTPUTS:matrix
 #-------------------------------------------------------------
