--- a/Homework4RegularExpressions.html
+++ b/Homework4RegularExpressions.html
@@ -92,6 +92,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -194,9 +197,9 @@ r &lt;- sqrt(xy[1]^2 + xy[2]^2)
 theta &lt;- atan(xy[2]/xy[1])
 
 print(r)</code></pre>
-<pre><code>## [1] 0.1749631</code></pre>
+<pre><code>## [1] 0.8580108</code></pre>
 <pre class="r"><code>print(theta)</code></pre>
-<pre><code>## [1] 0.6312237</code></pre>
+<pre><code>## [1] 0.1131266</code></pre>
 <hr />
 <p>Suppose that queue &lt;- c(“sheep”, “fox”, “owl”, “ant”) and that queue represents the animals that are lined up to enter Noah’s Ark, with the sheep at the front of the line. Using R expressions, update the queue successively as a. the serpent arrives; b. the sheep enters the ark; c. the donkey arrives and talks his way to the front of the line; d. the serpent gets impatient and leaves; e. the owl gets bored and leaves; f. the aphid arrives and the ant invites him to cut in line. Finally, determine the position of the aphid in the line.</p>
 <pre class="r"><code># Creating the initial queue with the concatenate 
