--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@ Creating Fake Data Sets To Explore Hypotheses.</p>
 Creating functions and working with structured programming.</p>
 <p> <a href="Homework10Looping.html">Homework 9-10</a><br />
 Performing <code>for</code> loops and randomisation of data.</p>
+<p> <a href="leafletR.html">Leaflet for R</a><br />
+Creating interactive maps easily within R.</p>
 <hr />
 <div id="reading-materials-on-molecular-stuff" class="section level5">
 <h5><a href="https://www.molecularecologist.com">Reading materials on molecular stuff</a></h5>
