--- a/index.html
+++ b/index.html
@@ -134,26 +134,28 @@ $(document).ready(function () {
 <blockquote>
 <p>Assignments and Projects</p>
 </blockquote>
-<p> Homework 1<br />
-Learning about GitHub and setting up website for uploading lab assignments.</p>
-<p> <a href="homework2.html">Homework 2</a><br />
-Working with different diagrams to illustrate and draw out an outline for potential research areas.</p>
-<p> <a href="NotesBeamer.pdf">Homework 3</a><br />
-Learning to use beamer and creating ones own presentation using beamer and R markdown.</p>
-<p> <a href="Homework4RegularExpressions.html">Homework 4</a><br />
-Doing some basic coding assignments and learning to use regular expressions in a text editor.</p>
-<p> <a href="Homework5dplyr.html">Homework 5</a><br />
-Learning to code in dplyr and how to use piping for efficient coding.</p>
-<p> <a href="Homework6DataDistribution.html">Homework 6</a><br />
-Simulating and fitting data distributions.</p>
-<p> <a href="Homework7CFakedata.html">Homework 7</a><br />
-Creating Fake Data Sets To Explore Hypotheses.</p>
-<p> <a href="Homework8StructuredProgramming.html">Homework 8</a><br />
-Creating functions and working with structured programming.</p>
-<p> <a href="Homework10Looping.html">Homework 9-10</a><br />
-Performing <code>for</code> loops and randomisation of data.</p>
-<p> <a href="leafletR.html">Leaflet for R</a><br />
-Creating interactive maps easily within R.</p>
+<ul>
+<li><p>Homework 1<br />
+Learning about GitHub and setting up website for uploading lab assignments.</p></li>
+<li><p><a href="homework2.html">Homework 2</a><br />
+Working with different diagrams to illustrate and draw out an outline for potential research areas.</p></li>
+<li><p><a href="NotesBeamer.pdf">Homework 3</a><br />
+Learning to use beamer and creating ones own presentation using beamer and R markdown.</p></li>
+<li><p><a href="Homework4RegularExpressions.html">Homework 4</a><br />
+Doing some basic coding assignments and learning to use regular expressions in a text editor.</p></li>
+<li><p><a href="Homework5dplyr.html">Homework 5</a><br />
+Learning to code in dplyr and how to use piping for efficient coding.</p></li>
+<li><p><a href="Homework6DataDistribution.html">Homework 6</a><br />
+Simulating and fitting data distributions.</p></li>
+<li><p><a href="Homework7CFakedata.html">Homework 7</a><br />
+Creating Fake Data Sets To Explore Hypotheses.</p></li>
+<li><p><a href="Homework8StructuredProgramming.html">Homework 8</a><br />
+Creating functions and working with structured programming.</p></li>
+<li><p><a href="Homework10Looping.html">Homework 9-10</a><br />
+Performing <code>for</code> loops and randomisation of data.</p></li>
+<li><p><a href="leafletR.html">Leaflet for R</a><br />
+Creating interactive maps easily within R.</p></li>
+</ul>
 <hr />
 <div id="reading-materials-on-molecular-stuff" class="section level5">
 <h5><a href="https://www.molecularecologist.com">Reading materials on molecular stuff</a></h5>
