--- a/index.html
+++ b/index.html
@@ -153,12 +153,19 @@ Creating Fake Data Sets To Explore Hypotheses.</p></li>
 Creating functions and working with structured programming.</p></li>
 <li><p><a href="Homework10Looping.html">Homework 9-10</a><br />
 Performing <code>for</code> loops and randomisation of data.</p></li>
+<li><p><a href="Homework11ggplot.html">Homework 11</a><br />
+Understanding the various options available for plotting when using <code>ggplot2</code>.</p></li>
 <li><p><a href="leafletR.html">Leaflet for R</a><br />
 Creating interactive maps easily within R.</p></li>
 </ul>
 <hr />
-<div id="reading-materials-on-molecular-stuff" class="section level5">
-<h5><a href="https://www.molecularecologist.com">Reading materials on molecular stuff</a></h5>
+<div id="course-instructors-nicholas-j.-gotelli-lauren-ash" class="section level5">
+<h5>Course instructors: <a href="https://gotellilab.github.io/Bio381/">Nicholas J. Gotelli</a> &amp; <a href="https://lvash.github.io/Bio381_2018/#id-section1">Lauren Ash</a></h5>
+<p>Github profile: <a href="https://github.com/anoobvinu07">anoobvinu07</a></p>
+<p>prettydoc : <a href="http://yixuan.cos.name/prettydoc/themes.html">Create pretty documents from R markdown</a></p>
+</div>
+<div id="section" class="section level5">
+<h5></h5>
 </div>
 </div>
 
